// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`InstanceFieldsTable Component Snapshot Testing should match snapshot for regular class 1`] = `
<div>
  <div
    style="margin-top: 16px;"
  >
    <div
      class="miq-data-table instance-fields"
    >
      <div
        class="cds--data-table-content"
      >
        <table
          class="cds--data-table cds--data-table--lg cds--data-table--visible-overflow-menu"
        >
          <thead>
            <tr>
              <th
                class="miq-data-table-header"
                scope="col"
              >
                <div
                  class="cds--table-header-label"
                >
                  Name
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </div>
              </th>
              <th
                class="miq-data-table-header"
                scope="col"
              >
                <div
                  class="cds--table-header-label"
                >
                  Value
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </div>
              </th>
              <th
                class="miq-data-table-header"
                scope="col"
              >
                <div
                  class="cds--table-header-label"
                >
                  Collect
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </div>
              </th>
              <th
                class="miq-data-table-header"
                scope="col"
              >
                <div
                  class="cds--table-header-label"
                >
                  Message
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </div>
              </th>
              <th
                class="miq-data-table-header"
                scope="col"
              >
                <div
                  class="cds--table-header-label"
                >
                  Edit
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            aria-live="polite"
          >
            <tr
              class="simple-row"
              tabindex=""
              title=""
            >
              <td>
                <div
                  class="cell"
                  title=""
                >
                  <i
                    class="fa-lg icon pficon pficon-info"
                  />
                  <span
                    class="cds--front-line"
                    title="Field 1 (field1)"
                  >
                    Field 1 (field1)
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title="test_value"
                  >
                    test_value
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title=""
                  />
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title=""
                  />
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <button
                    class="miq-data-table-button cds--btn cds--btn--sm cds--layout--size-sm cds--btn--primary"
                    tabindex="0"
                    title="Edit"
                    type="button"
                  >
                    <span
                      class="cds--front-line"
                      title="Edit"
                    >
                      Edit
                    </span>
                  </button>
                </div>
              </td>
            </tr>
            <tr
              class="simple-row"
              tabindex=""
              title=""
            >
              <td>
                <div
                  class="cell"
                  title=""
                >
                  <i
                    class="fa-lg icon pficon pficon-warning-triangle-o"
                  />
                  <span
                    class="cds--front-line"
                    title="Field 2 (field2)"
                  >
                    Field 2 (field2)
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title="42"
                  >
                    42
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title="/collect/path"
                  >
                    /collect/path
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title="Warning message"
                  >
                    Warning message
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <button
                    class="miq-data-table-button cds--btn cds--btn--sm cds--layout--size-sm cds--btn--primary"
                    tabindex="0"
                    title="Edit"
                    type="button"
                  >
                    <span
                      class="cds--front-line"
                      title="Edit"
                    >
                      Edit
                    </span>
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`InstanceFieldsTable Component Snapshot Testing should match snapshot for state machine class 1`] = `
<div>
  <div
    style="margin-top: 16px;"
  >
    <div
      class="miq-data-table instance-fields"
    >
      <div
        class="cds--data-table-content"
      >
        <table
          class="cds--data-table cds--data-table--lg cds--data-table--visible-overflow-menu"
        >
          <thead>
            <tr>
              <th
                class="miq-data-table-header"
                scope="col"
              >
                <div
                  class="cds--table-header-label"
                >
                  Name
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </div>
              </th>
              <th
                class="miq-data-table-header"
                scope="col"
              >
                <div
                  class="cds--table-header-label"
                >
                  Value
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </div>
              </th>
              <th
                class="miq-data-table-header"
                scope="col"
              >
                <div
                  class="cds--table-header-label"
                >
                  On Entry
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </div>
              </th>
              <th
                class="miq-data-table-header"
                scope="col"
              >
                <div
                  class="cds--table-header-label"
                >
                  On Exit
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </div>
              </th>
              <th
                class="miq-data-table-header"
                scope="col"
              >
                <div
                  class="cds--table-header-label"
                >
                  On Error
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </div>
              </th>
              <th
                class="miq-data-table-header"
                scope="col"
              >
                <div
                  class="cds--table-header-label"
                >
                  Max Retries
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </div>
              </th>
              <th
                class="miq-data-table-header"
                scope="col"
              >
                <div
                  class="cds--table-header-label"
                >
                  Max Time
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </div>
              </th>
              <th
                class="miq-data-table-header"
                scope="col"
              >
                <div
                  class="cds--table-header-label"
                >
                  Collect
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </div>
              </th>
              <th
                class="miq-data-table-header"
                scope="col"
              >
                <div
                  class="cds--table-header-label"
                >
                  Message
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </div>
              </th>
              <th
                class="miq-data-table-header"
                scope="col"
              >
                <div
                  class="cds--table-header-label"
                >
                  Edit
                  <div
                    class="cds--table-header-label--decorator-inner"
                  />
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            aria-live="polite"
          >
            <tr
              class="simple-row"
              tabindex=""
              title=""
            >
              <td>
                <div
                  class="cell"
                  title=""
                >
                  <i
                    class="fa-lg icon pficon pficon-info"
                  />
                  <span
                    class="cds--front-line"
                    title="State 1 (state1)"
                  >
                    State 1 (state1)
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title="state_value"
                  >
                    state_value
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title="on_entry_method"
                  >
                    on_entry_method
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title="on_exit_method"
                  >
                    on_exit_method
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title="on_error_method"
                  >
                    on_error_method
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title="3"
                  >
                    3
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title="60"
                  >
                    60
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title=""
                  />
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title=""
                  />
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <button
                    class="miq-data-table-button cds--btn cds--btn--sm cds--layout--size-sm cds--btn--primary"
                    tabindex="0"
                    title="Edit"
                    type="button"
                  >
                    <span
                      class="cds--front-line"
                      title="Edit"
                    >
                      Edit
                    </span>
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
